# aoce

./: .gitignore  .tfignore  CMakeLists.txt  LICENSE  README.md  aoce_android_install.jks
CSharp/AoceWrapper/: CMakeLists.txt  aocewrapper.i
code/: CMakeLists.txt  CudaWrapper.cu  README.md
code/aoce/: Aoce.cpp  Aoce.h  Aoce.hpp  AoceAudioDevice.h  AoceBuildSettings.h  AoceCore.cpp  AoceCore.h  AoceDefine.h  AoceLayer.h  AoceLive.h  AoceManager.cpp  AoceManager.hpp  AoceMath.h  AoceMedia.h  AoceMetadata.h  AoceVideoDevice.h  AoceWindow.h  CMakeLists.txt  README.md
code/aoce/FixGraph/: VideoView.cpp  VideoView.hpp  VideoViewGraph.cpp  VideoViewGraph.hpp
code/aoce/Layer/: BaseLayer.cpp  BaseLayer.hpp  InputLayer.cpp  InputLayer.hpp  Layer.h  LayerFactory.hpp  LayerGraph.cpp  LayerGraph.hpp  LayerNode.cpp  LayerNode.hpp  OutputLayer.cpp  OutputLayer.hpp  PipeGraph.cpp  PipeGraph.hpp  PipeNode.cpp  PipeNode.hpp
code/aoce/Live/: ILiveObserver.cpp  ILiveObserver.hpp  LiveCallback.cpp  LiveCallback.hpp  LiveRoom.cpp  LiveRoom.hpp
code/aoce/Math/: AMath.cpp  AMath.hpp
code/aoce/Media/: MediaPlayer.cpp  MediaPlayer.hpp  VideoEncoder.hpp
code/aoce/MediaCodec/: VideoEncoder.hpp
code/aoce/Module/: FrameCount.cpp  ModuleManager.cpp  ModuleManager.hpp
code/aoce/VideoDevice/: VideoDevice.cpp  VideoDevice.hpp  VideoManager.cpp  VideoManager.hpp
code/aoce/audiodevice/: AudioDevice.cpp  AudioDevice.hpp  AudioHelper.cpp
code/aoce/fixgraph/: VideoView.hpp
code/aoce/layer/: BaseLayer.cpp  BaseLayer.hpp  InputLayer.cpp  OutputLayer.cpp  OutputLayer.hpp  PipeGraph.cpp
code/aoce/live/: LiveRoom.cpp
code/aoce/math/: AMath.cpp  WrapMat.cpp  WrapMat.hpp
code/aoce/media/: AudioEncoder.cpp  AudioEncoder.hpp  MediaHelper.cpp  MediaHelper.hpp  MediaMuxer.cpp  MediaMuxer.hpp  MediaPlayer.cpp  MediaPlayer.hpp  VideoEncoder.cpp  VideoEncoder.hpp
code/aoce/metadata/: LayerMetadata.cpp  LayerMetadata.hpp
code/aoce/module/: FrameCount.hpp  IModule.cpp  IModule.hpp  ModuleManager.cpp  ModuleManager.hpp
code/aoce/videodevice/: VideoDevice.cpp  VideoDevice.hpp  VideoManager.cpp  VideoManager.hpp
code/aoce_android/: AVideoDevice.cpp  AVideoDevice.hpp  AVideoManager.cpp  AVideoManager.hpp  AndroidModule.cpp  AndroidModule.hpp  CMakeLists.txt  JNIHelper.cpp  README.md
code/aoce_cuda/: CMakeLists.txt  CuLayerFactory.cpp  CuLayerFactory.hpp  CudaHelper.cpp  CudaHelper.hpp  CudaMat.cpp  CudaMat.hpp  CudaModule.cpp  CudaModule.hpp  README.md
code/aoce_cuda/cuda/: CudaTypes.hpp  CudaWrapper.cu  colorconvert.h  cuda_common.h  fastguidedfilter.h  helper_math.h  imageprocess.h
code/aoce_cuda/layer/: CuComputeLayer.cpp  CuComputeLayer.hpp  CuInputLayer.cpp  CuInputLayer.hpp  CuLayer.cpp  CuLayer.hpp  CuOutputLayer.cpp  CuOutputLayer.hpp  CuPipeGraph.cpp  CuPipeGraph.hpp  CuRGBA2YUVLayer.cpp  CuRGBA2YUVLayer.hpp  CuResizeLayer.cpp  CuResizeLayer.hpp  CuYUV2RGBALayer.cpp  CuYUV2RGBALayer.hpp
code/aoce_ffmpeg/: AoceFFmpeg.cpp  AoceFFmpeg.hpp  CMakeLists.txt  FFmpegModule.cpp  FFmpegModule.hpp  FMediaFactory.cpp  FMediaFactory.hpp  FMediaPlayer.cpp  FMediaPlayer.hpp
code/aoce_ffmpeg/media/: FAACEncoder.cpp  FAACEncoder.hpp  FH264Encoder.cpp  FH264Encoder.hpp  FMediaMuxer.cpp  FMediaMuxer.hpp  FMediaPlayer.cpp  FMediaPlayer.hpp
code/aoce_ncnn/: AoceInterop.cpp  AoceInterop.hpp  AoceNcnnExport.cpp  AoceNcnnExport.h  CMakeLists.txt  CNNHelper.cpp  CNNHelper.hpp  FaceDetector.cpp  FaceDetector.hpp  FaceKeypointDetector.cpp  FaceKeypointDetector.hpp  README.md  VideoMatting.cpp  VideoMatting.hpp  VkNcnnInLayer.cpp  VkNcnnInLayer.hpp  VkNcnnModule.cpp  VkNcnnModule.hpp
code/aoce_vulkan/: CMakeLists.txt  README.md  VkCommand.cpp  VkCommand.hpp  VkLayerFactory.cpp  VkLayerFactory.hpp  VulkanModule.cpp  VulkanModule.hpp
code/aoce_vulkan/android/: HardwareImage.cpp  HardwareImage.hpp  vulkan_wrapper.h
code/aoce_vulkan/glsl/: compileshaders.py  inputv1.comp  inputv1.comp.spv  inputv2.comp  operate.comp  rgba2yuvV1.comp  rgba2yuvV1.comp.spv  rgba2yuvV2.comp  rgba2yuvV2.comp.spv  transpose.comp  transpose.comp.spv  yuv2rgbaV1.comp  yuv2rgbaV1.comp.spv  yuv2rgbaV2.comp  yuv2rgbaV2.comp.spv
code/aoce_vulkan/layer/: VkBlendLayer.cpp  VkBlendLayer.hpp  VkHelper.cpp  VkHelper.hpp  VkInputLayer.cpp  VkInputLayer.hpp  VkLayer.cpp  VkLayer.hpp  VkLayerFactory.cpp  VkLayerFactory.hpp  VkOperateLayer.cpp  VkOperateLayer.hpp  VkOutputLayer.cpp  VkOutputLayer.hpp  VkPipeGraph.cpp  VkPipeGraph.hpp  VkRGBA2YUVLayer.cpp  VkRGBA2YUVLayer.hpp  VkResizeLayer.cpp  VkResizeLayer.hpp  VkTransposeLayer.cpp  VkTransposeLayer.hpp  (+2 more)
code/aoce_vulkan_extra/: AoceVkExtra.h  AoceVkExtra.hpp  CMakeLists.txt  README.md  VkExtraExport.cpp  VkExtraExport.h  VkExtraExport.hpp  VkExtraModule.cpp  VkExtraModule.hpp
code/aoce_win/: BCaptureWindow.cpp  BCaptureWindow.hpp  CMakeLists.txt  WinHelp.cpp  WinHelp.hpp  WinModule.cpp  WinModule.hpp
code/aoce_win_mf/: CMakeLists.txt  MfModule.cpp  MfModule.hpp  README.md
code/aoce_winrt/: CMakeLists.txt  RTCaptureWindow.cpp  RTCaptureWindow.hpp  WinRTModule.cpp  WinRTModule.hpp
doc/: MAUI.md  (+30 more)
samples/: CMakeLists.txt  README.md
samples/01_findmodule/: 01_findmodule.cpp
samples/02_showdevice/: 02_showdevice.cpp
samples/03_findvulkan/: 03_findvulkan.cpp
samples/04_vulkantest/: 04_vulkantest.cpp
samples/05_livetest/: 05_livetest.cpp
samples/06_mediaplayer/: 06_mediaplayer.cpp
samples/07_androidtest/: 07_androidtest.cpp
samples/07_wintest/: 07_wintest.cpp
samples/08_vulkanextra/: 08_vulkanextra.cpp
samples/09_wincapture/: 09_wincapture.cpp
samples/cudatest/: CMakeLists.txt  cudatest.cpp  cudatest.h  fastguidedfilter_color.cu  fastguidedtest.cu  hist.cu
samples/findmodule/: findmodule.cpp
samples/mathtest/: CMakeLists.txt  base.cpp  base.hpp
samples/ncnntest/: CMakeLists.txt  mattingtest.cpp  ncnntest.cpp
samples/showdevice/: showdevice.cpp
samples/vulkanextratest/: Android.cpp  CMakeLists.txt  VkExtraBaseView.cpp  VkExtraBaseView.hpp  Win32.cpp
swig/: CMakeLists.txt  aocewrapper.i  talkto.i
swig/CSharp/: CMakeLists.txt
swig/Java/: CMakeLists.txt
(+463 files in other folders)
