
set(targets 01_findmodule)
set(targetopencvs 02_showdevice 03_findvulkan) 
set(targetvulkans 04_vulkantest 05_livetest 06_mediaplayer)

SET(OpenCV_DIR D:/WorkSpace/C++/opencv/opencv41/build/install)
find_package(OpenCV)   
message(STATUS "OpenCV library status:")  
message(STATUS "    found: ${OpenCV_FOUND}")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    librarie path: ${OpenCV_LIB_PATH}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")

function(generate target isopencv)    
    set(source ${target}/${target}.cpp)     
    if("${ARGC}" LESS 3)    
        message(STATUS "ARGV2 none") 
        add_executable(${target} ${source})
    else()     
        message(STATUS "ARGV2: ${ARGV2}")     
        add_executable(${target} WIN32 ${source})
    endif()    
    # target_link_options(${target} PRIVATE -mwindows)    
    if(isopencv)    
        message(STATUS "link opencv: ${OpenCV_LIBS}")    
        target_link_libraries(${target} aoce ${OpenCV_LIBS} ${ARGV2})
    else()
        target_link_libraries(${target} aoce ${ARGV2})
    endif()
    aoce_output(${target})
endfunction()

function(sample)
    foreach(target ${targets})
        generate(${target} FALSE)
    endforeach()
    if(OpenCV_FOUND)
        foreach(target ${targetopencvs})
            generate(${target} TRUE)
        endforeach()    
    endif() 
    foreach(target ${targetvulkans})
        if(WIN32)
            generate(${target} FALSE aoce_vulkan ${Vulkan_LIBRARY})
        endif()  
#        if(ANDROID)
#            add_library(${target} SHARED ${target}/${target}.cpp)
#            target_link_libraries(${target} android native-app-glue aoce aoce_vulkan)
#        endif()
    endforeach()  
endfunction(sample) 

if(WIN32)
    include_directories(${AOCE_HEADER_DIR} ${OpenCV_INCLUDE_DIRS} ${AOCE_VULKAN_HEADER_DIR} ${Vulkan_INCLUDE_DIR})
    sample()    
    # add_subdirectory(mathtest)
endif()

if(ANDROID)
    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")
    # set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")
    include_directories(${ANDROID_NDK}/sources/android/native_app_glue ${AOCE_HEADER_DIR} ${AOCE_VULKAN_HEADER_DIR} ${Vulkan_INCLUDE_DIR})
    add_library(native-app-glue STATIC ${ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c)
    
    add_library(04_vulkantest SHARED 04_vulkantest/04_vulkantest.cpp)
    target_link_libraries(04_vulkantest android native-app-glue aoce aoce_vulkan)
    
    add_library(05_livetest SHARED 05_livetest/05_livetest.cpp)
    target_link_libraries(05_livetest android native-app-glue aoce aoce_vulkan)

    add_library(06_mediaplayer SHARED 06_mediaplayer/06_mediaplayer.cpp)
    target_link_libraries(06_mediaplayer android aoce aoce_vulkan aoce_ffmpeg)
endif()